...
                    app:layout_constraintTop_toBottomOf="@id/divider1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:text="@string/logo"
                    android:textSize="17sp"
                    />
            <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/xlsx_use_logo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/xlsx_logo_text"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:checked="@={prefs.xlsxUseLogo}"
                    android:text="@string/use_logo"/>
...
                    app:layout_constraintTop_toBottomOf="@id/divider2"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:text="@string/footer"
                    android:textSize="17sp"
                    />
            <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/xlsx_use_footer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/xlsx_footer_text"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:checked="@={prefs.xlsxUseFooter}"
                    android:text="@string/use_footer"/>
...
