...
                        />
                <RadioButton android:id="@+id/radio_xlsx_output"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/xlsx_output"
                        />
                <RadioButton android:id="@+id/radio_pdf_output"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pdf_output"
                        />
                <RadioButton android:id="@+id/radio_select_output"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/select_output"
                        />
            </RadioGroup>
            <com.google.android.material.divider.MaterialDivider
...
