...
                    app:layout_constraintTop_toBottomOf="@id/divider1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:text="@string/logo"
                    android:textSize="17sp"
                    />
            <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/pdf_use_logo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    app:layout_constraintTop_toBottomOf="@id/pdf_setting_text"
                    app:layout_constraintLeft_toLeftOf="parent"
...
                    app:layout_constraintTop_toBottomOf="@id/divider2"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:text="@string/footer"
                    android:textSize="17sp"
                    />
            <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/pdf_use_footer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    app:layout_constraintTop_toBottomOf="@id/pdf_footer_text"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:checked="@={prefs.pdfUseFooter}"
...
