<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".editor_fragments.BillEditorFragment">
    <data>
        <variable name="view_model" type="com.stemaker.arbeitsbericht.view_models.BillViewModel"/>
    </data>

    <com.stemaker.arbeitsbericht.helpers.LinearLayoutVisListener
        android:id="@+id/bill_content_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:visibility="@={view_model.visibility}">
        <Button
                android:id="@+id/client_select_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ArbeitsberichtAppTheme.IconTextButtons"
                app:icon="@drawable/ic_assignment_black_24dp"
                android:text="@string/client_list"
                android:layout_gravity="right"
                />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:visibility="visible">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bill_address_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName|textCapWords"
                android:text="@={view_model.name}"
                android:hint="@string/name"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:visibility="visible">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bill_address_street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:text="@={view_model.street}"
                android:hint="@string/street"/>
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:id="@+id/plz_ort_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:visibility="visible">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/bill_address_zip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:text="@={view_model.zip}"
                    android:hint="@string/zip"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:visibility="visible">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/bill_address_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:text="@={view_model.city}"
                    android:hint="@string/city"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout> <!-- End of plz_ort_container-->
    </com.stemaker.arbeitsbericht.helpers.LinearLayoutVisListener> <!-- End of billdata_content_container-->
</layout>