...
            app:visibility="@={view_model.visibility}">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="395dp"
                android:layout_height="wrap_content"
                android:visibility="visible">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/project_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName|textCapWords"
                    android:text="@={view_model.name}"
                    android:hint="@string/client_project"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="395dp"
                android:layout_height="wrap_content"
                android:visibility="visible">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/project_extra1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:text="@={view_model.extra1}"
                    android:hint="@string/extra"/>
            </com.google.android.material.textfield.TextInputLayout>
...
