<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/report_card_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ArbeitsberichtAppTheme.CardLevel1"
        android:clickable="false">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/section_container">
        <LinearLayout
                android:id="@+id/resh_headline_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:clickable="true">
            <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/resh_headline_textview"
                    android:text="@{resh_headline_text}"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:textSize="26sp"
                    />
            <ImageView
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_expand_more_black_24dp"
                    android:id="@+id/resh_expand_content_pic"
                    android:layout_gravity="right"
                    android:background="#00000000"
                    />
        </LinearLayout> <!-- End of resh_headline_container -->
    </LinearLayout>
</androidx.cardview.widget.CardView>