...
                android:paddingRight="5dp"
                tools:listitem="@layout/report_card_layout">
        </androidx.recyclerview.widget.RecyclerView>

        <!-- New report button -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/new_report_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_margin="16dp"
                android:text="@string/create_new_report"
...
